<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:baselineAligned="false"
    android:orientation="vertical">


    <TabHost
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tabContactList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/txtMyContacts"
                        android:id="@+id/textView"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp" />
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listView"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/tabCreator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/contactCreator"
                        android:id="@+id/lblCreatorTitle"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgViewContactImage"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/no_user" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/txtName"
                        android:layout_marginTop="15dp"
                        android:hint="@string/contactName" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/txtPhone"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:hint="@string/contactPhone" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/txtEmail"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:hint="@string/contactEmail" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/txtAddress"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:hint="@string/contactAddress"
                        android:inputType="textPostalAddress" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txtAddContact"
                        android:id="@+id/btnAdd"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:enabled="false" />
                </LinearLayout>
                </ScrollView>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
